// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`namespace.php 1`] = `
<?php
namespace Base\\Test\\To\\Extend;

use Other\\Test\\Import;
use One\\More\\Test;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Base\\Test\\To\\Extend;

use Other\\Test\\Import;
use One\\More\\Test;

`;

exports[`nested.php 1`] = `
<?php

namespace foo {
    function bar($a, $b) {
        return $a + $b;
    }
    echo bar(2, 3);
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace foo {
  function bar($a, $b) {
    return $a + $b;
  }
  echo bar(2, 3);
}

`;

exports[`single.php 1`] = `
<?php
namespace Foo;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
namespace Foo;

`;
